[project]
name = "weight-extractor"
version = "0.1.0"
description = "Extract weight readings from scale video frames using OpenAI Vision API"
authors = [
    {name = "Assaf Lavie",email = "a@assaf.io"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "openai (>=1.107.3,<2.0.0)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
