[project]
name = "uroflow"
version = "0.1.0"
description = "DIY Uroflowmetry Analysis Tool - Extract flow metrics from scale video frames"
authors = [
    {name = "Assaf Lavie",email = "a@assaf.io"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "openai (>=1.107.3,<2.0.0)",
    "click (>=8.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "aiometer (>=1.0.0,<2.0.0)",
    "reportlab (>=4.4.3,<5.0.0)"
]

package-mode = false

[project.scripts]
uroflow = "uroflow:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
